melhorando a modelagem do banco de dados